--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,11 @@
 pandas==2.2.0
 numpy==1.26.3
-scikit-learn==1.4.0
+scikit-learn==1.3.0
 joblib==1.3.2
 openpyxl==3.1.2
 fastapi==0.109.0
 uvicorn==0.27.0
 pydantic==2.6.0
-pytest==8.0.0
 requests==2.31.0
-loguru==0.7.2
+httpx==0.25.0
+scipy==1.12.0
